...
        <capability name="documents saved in the Xcode 8 format" minToolsVersion="8.0"/>
    </dependencies>
    <scenes>
        <!--Settings View Controller-->
        <scene sceneID="HYz-N6-VbB">
            <objects>
                <tableViewController id="qd2-XQ-X6w" customClass="SettingsViewController" customModule="Cutline" customModuleProvider="target" sceneMemberID="viewController">
                    <tableView key="view" clipsSubviews="YES" contentMode="scaleToFill" alwaysBounceVertical="YES" dataMode="static" style="grouped" separatorStyle="default" rowHeight="44" sectionHeaderHeight="18" sectionFooterHeight="18" id="TZR-0D-Nnw">
                        <rect key="frame" x="0.0" y="0.0" width="375" height="667"/>
                        <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                        <color key="backgroundColor" cocoaTouchSystemColor="groupTableViewBackgroundColor"/>
                        <sections>
                            <tableViewSection headerTitle="Settings" id="UWz-Uo-P0K">
...
                        </prototypes>
                        <connections>
                            <outlet property="dataSource" destination="qpS-Ic-S9C" id="NuX-Sm-oj0"/>
                            <outlet property="delegate" destination="qpS-Ic-S9C" id="yHt-2q-amD"/>
                        </connections>
                    </tableView>
                    <navigationItem key="navigationItem" title="Search" id="M6W-EX-qFq">
                        <barButtonItem key="leftBarButtonItem" image="settingsFilled" id="kRo-i6-dPn">
                            <connections>
                                <segue destination="qd2-XQ-X6w" kind="show" identifier="showSettings" id="76m-BG-po3"/>
                            </connections>
                        </barButtonItem>
                    </navigationItem>
...
