...
	override func viewWillAppear(_ animated: Bool) {
		super.viewWillAppear(animated)
		
		navigationItem.rightBarButtonItem =
			UIBarButtonItem(barButtonSystemItem: .cancel, target: self, action: #selector(cancel))
		
		navigationItem.title = "Create"
		
		captionView.layer.borderWidth = 1
		captionView.layer.borderColor = UIColor.black.cgColor
		
		// Don't mess with the captionView insets
		automaticallyAdjustsScrollViewInsets = false
...
