...
		completionHandler(quickAction(for: shortcutItem))
	}
	
	private func quickAction(for shortcutItem: UIApplicationShortcutItem) -> Bool {
		
		let name = shortcutItem.type.components(separatedBy: ".").last!
		if name == "Search" {
			
			tabBarController.selectedIndex = 1
			return true
		}
		
		return false
...
